--- a/index.html
+++ b/index.html
@@ -58,13 +58,34 @@
         <div class="indexMain-BgWhite">
             <div class="indexMain-box">
                 <div class="row">
-                    <div class="col-lg-8">
-                        <div>赛事报名
+                    <div class="col-lg-4 col-lg-push-8 col-md-4 col-md-push-8">
+                        <div class="row">
 
                         </div>
-                        <div>赛事排行</div>
+                        <div class="music-play">
+                            音乐播放器
+                        </div>
+                        <div class="competition-agenda">
+                            赛程
+                        </div>
+                        <div class="competition-result">
+                            赛况
+                        </div>
                     </div>
-                    <div class="col-lg-2">音乐播放器</div>
+                    <div class="col-lg-8 col-lg-pull-4 col-md-8 col-md-pull-4">
+                        <div class="competition-apply">赛事报名
+
+                        </div>
+                        <div class="competition-among">赛事排行
+
+                        </div>
+                        <div class="carousel-img">
+                            轮播图
+                        </div>
+                        <div class="competition-grade">
+                            赛事成绩
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
