only test level

--- a/index.html
+++ b/index.html
@@ -45,53 +45,87 @@
 </nav>
 
 <!--banner-->
-<div class="banner-wrap">
+<!-- <div class="banner-wrap">
     <div class="container">
-        sss
+        轮播图
     </div>
-</div>
+</div> -->
 
 
 <!--主要内容区域-->
-<div class="container-wrap">
+<div class="indexMain-wrap">
     <div class="container">
-        <div class="indexMain-BgWhite">
-            <div class="indexMain-box">
-                <div class="row">
-                    <div class="col-lg-4 col-lg-push-8 col-md-4 col-md-push-8">
-                        <div class="row">
-
+        <div class="indexMain-BgWhite-box clearfix">
+            <div class="indexMain-BgWhite">
+                <div class="pull-right col-xs-12 col-sm-12 col-md-4 first-box">
+                    <a href="javascript:;" class="video-box">
+                        <img src="img/video.jpg" alt="" class="video-item">
+                        
+                    </a>
+                    <!-- <div class="con-schedule">
+                        <div class="con-reg-title clearfix">
+                            <i class="con-reg-tip fl"></i>
+                            <span class="con-reg-text fl">赛程</span>
+                            <i class="con-reg-line fl">/</i>
+                            <span class="con-reg-sub fl">SCHEDULE</span>
                         </div>
-                        <div class="music-play">
-                            音乐播放器
+                        <div class="con-light clearfix"><i></i><p>2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）比赛时间调整为7月2日-3日，在线报名已经开启。</p></div>
+                        <div class="con-rate">
+                            <dl>
+                                <dd>
+                                    <i class="con-rate-top"></i>
+                                    <i class="con-rate-circle"></i>
+                                    <span class="con-rate-time">2016-06-18</span>
+                                    <ul class="con-rate-list">
+                                        <li>
+                                            <span>09:00</span><em>开幕式</em>
+                                        </li>
+                                        <li>
+                                            <span>10:00</span><em>女子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>14:30</span><em>男子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
+                                        </li>
+                                    </ul>
+                                </dd>
+                                <dd>
+                                    <i class="con-rate-top"></i>
+                                    <i class="con-rate-circle"></i>
+                                    <span class="con-rate-time">2016-06-18</span>
+                                    <ul class="con-rate-list">
+                                        <li>
+                                            <span>09:00</span><em>开幕式</em>
+                                        </li>
+                                        <li>
+                                            <span>10:00</span><em>女子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>14:30</span><em>男子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
+                                        </li>
+                                    </ul>
+                                </dd>
+                            </dl>
                         </div>
-                        <div class="competition-agenda">
-                            赛程
-                        </div>
-                        <div class="competition-result">
-                            赛况
-                        </div>
+                    </div> -->
+                </div>
+                <div class="pull-left col-xs-12 col-sm-12 col-md-8 col-xs-pull-left col-sm-pull-left second-box">
+                    <div class="saishi-box">
+                        sf
                     </div>
-                    <div class="col-lg-8 col-lg-pull-4 col-md-8 col-md-pull-4">
-                        <div class="competition-apply">赛事报名
-
-                        </div>
-                        <div class="competition-among">赛事排行
-
-                        </div>
-                        <div class="carousel-img">
-                            轮播图
-                        </div>
-                        <div class="competition-grade">
-                            赛事成绩
-                        </div>
-                    </div>
+                </div>
+                <div class="pull-right col-xs-12 col-sm-12 col-md-4 three-box">
+                    <div class="ranking-box"></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 </body>
 </html>
