complete index.html base layout,complete video

--- a/index.html
+++ b/index.html
@@ -58,61 +58,30 @@
         <div class="indexMain-BgWhite-box clearfix">
             <div class="indexMain-BgWhite">
                 <div class="pull-right col-xs-12 col-sm-12 col-md-4 first-box">
-                    <a href="javascript:;" class="video-box">
+                    <div class="video-box">
                         <img src="img/video.jpg" alt="" class="video-item">
-                        
-                    </a>
-                    <!-- <div class="con-schedule">
-                        <div class="con-reg-title clearfix">
-                            <i class="con-reg-tip fl"></i>
-                            <span class="con-reg-text fl">赛程</span>
-                            <i class="con-reg-line fl">/</i>
-                            <span class="con-reg-sub fl">SCHEDULE</span>
+                        <div class="video-sec">
+                            <a href="javascript:;" class="video-text clearfix">
+                                <i class="video-icon"></i>
+                                <p>2016 全国攀岩分站赛（第三站）- 福建.厦门（B,S）</p>
+                            </a>
+                            <div class="video-gn clearfix">
+                                <div class="video-play video-pre">
+                                    <i></i>
+                                    <p>上一个视频</p>
+                                </div>
+                                <a href="" class="video-btn bg-default">
+                                    <i></i>
+                                    <p>进入直播间</p>
+                                </a>
+                                <div class="video-play video-next">
+                                    <p>下一个视频</p>
+                                    <i></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="con-light clearfix"><i></i><p>2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）比赛时间调整为7月2日-3日，在线报名已经开启。</p></div>
-                        <div class="con-rate">
-                            <dl>
-                                <dd>
-                                    <i class="con-rate-top"></i>
-                                    <i class="con-rate-circle"></i>
-                                    <span class="con-rate-time">2016-06-18</span>
-                                    <ul class="con-rate-list">
-                                        <li>
-                                            <span>09:00</span><em>开幕式</em>
-                                        </li>
-                                        <li>
-                                            <span>10:00</span><em>女子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>14:30</span><em>男子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
-                                        </li>
-                                    </ul>
-                                </dd>
-                                <dd>
-                                    <i class="con-rate-top"></i>
-                                    <i class="con-rate-circle"></i>
-                                    <span class="con-rate-time">2016-06-18</span>
-                                    <ul class="con-rate-list">
-                                        <li>
-                                            <span>09:00</span><em>开幕式</em>
-                                        </li>
-                                        <li>
-                                            <span>10:00</span><em>女子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>14:30</span><em>男子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
-                                        </li>
-                                    </ul>
-                                </dd>
-                            </dl>
-                        </div>
-                    </div> -->
+                    </div>
+
                 </div>
                 <div class="pull-left col-xs-12 col-sm-12 col-md-8 col-xs-pull-left col-sm-pull-left second-box">
                     <div class="saishi-box">
