xiangyingshi tiaozheng to index.html ,but no complete.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="pull-left col-xs-12 col-sm-12 col-md-8 col-xs-pull-left col-sm-pull-left second-box">
                    <div class="saishi-box">
-                       <div class="con-left fl">
+                       <div class="con-left">
                            <div class="con-reg">
                                <div class="con-reg-title clearfix">
                                    <i class="con-reg-tip fl"></i>
@@ -327,7 +327,7 @@
                                    <a href="javascript:;" class="con-reg-more fr">MORE+</a>
                                </div>
                                <div class="con-result-list">
-                                   <ul>
+                                   <ul class="clearfix">
                                        <li>
                                            <div class="con-result-title clearfix">
                                                <span class="con-result-num con-result-num1"></span>
