ji ben buju yijing zuo hao le,jiu cha shouye de tupian zishiying.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
                             <i class="con-reg-line fl">/</i>
                             <span class="con-reg-sub fl">ACTION</span>
                         </div>
+                        <div class="caikuang-box hidden-sm hidden-md hidden-lg">
+                            <p class="tips">暂无赛况</p>
+                        </div>
                     </div>
 
                 </div>
@@ -329,10 +332,10 @@
                                            </ul>
                                        </div>
                                    </div>
-                                   <a href="javascript:;" class="con-reg-more fr">MORE+</a>
+                                   <a href="javascript:;" class="con-reg-more fr hidden-xs">MORE+</a>
                                </div>
-                               <div class="con-result-list">
-                                   <ul class="clearfix">
+                               <div class="con-result-list row">
+                                   <!--<ul class="clearfix">
                                        <li>
                                            <div class="con-result-title clearfix">
                                                <span class="con-result-num con-result-num1"></span>
@@ -513,7 +516,211 @@
                                                </div>
                                            </div>
                                        </li>
-                                   </ul>
+                                   </ul>-->
+                                   <div class="col-sm-6">
+                                       <div class="con-result-title clearfix">
+                                           <span class="con-result-num con-result-num1"></span>
+                                           <em>难度赛</em>
+                                           <em>男子组</em>
+                                           <span class="con-result-arrow"></span>
+                                       </div>
+                                       <table class="paiming-table">
+                                           <thead>
+                                               <tr>
+                                                   <th class="con-result-td1">排名</th>
+                                                   <th class="con-result-td2">姓名</th>
+                                                   <th class="con-result-td3">决赛成绩</th>
+                                               </tr>
+                                           </thead>
+                                           <tbody>
+                                               <tr>
+                                                   <td><i class="con-result-rate">1</i></td>
+                                                   <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                                   <td class="con-result-td3 con-result-grade">48 +</td>
+                                               </tr>
+                                               <tr>
+                                                   <td><i class="con-result-rate">2</i></td>
+                                                   <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                                   <td class="con-result-td3 con-result-grade">48 +</td>
+                                               </tr>
+                                               <tr>
+                                                   <td><i class="con-result-rate">3</i></td>
+                                                   <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                                   <td class="con-result-td3 con-result-grade">48 +</td>
+                                               </tr>
+                                           </tbody>
+                                       </table>
+                                   </div>
+                                   <div class="col-sm-6">
+                                       <div class="con-result-title clearfix">
+                                           <span class="con-result-num con-result-num1"></span>
+                                           <em>难度赛</em>
+                                           <em>男子组</em>
+                                           <span class="con-result-arrow"></span>
+                                       </div>
+                                       <table class="paiming-table">
+                                           <thead>
+                                           <tr>
+                                               <th class="con-result-td1">排名</th>
+                                               <th class="con-result-td2">姓名</th>
+                                               <th class="con-result-td3">决赛成绩</th>
+                                           </tr>
+                                           </thead>
+                                           <tbody>
+                                           <tr>
+                                               <td><i class="con-result-rate">1</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">2</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">3</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           </tbody>
+                                       </table>
+                                   </div>
+                                   <div class="col-sm-6">
+                                       <div class="con-result-title clearfix">
+                                           <span class="con-result-num con-result-num1"></span>
+                                           <em>难度赛</em>
+                                           <em>男子组</em>
+                                           <span class="con-result-arrow"></span>
+                                       </div>
+                                       <table class="paiming-table">
+                                           <thead>
+                                           <tr>
+                                               <th class="con-result-td1">排名</th>
+                                               <th class="con-result-td2">姓名</th>
+                                               <th class="con-result-td3">决赛成绩</th>
+                                           </tr>
+                                           </thead>
+                                           <tbody>
+                                           <tr>
+                                               <td><i class="con-result-rate">1</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">2</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">3</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           </tbody>
+                                       </table>
+                                   </div>
+                                   <div class="col-sm-6">
+                                       <div class="con-result-title clearfix">
+                                           <span class="con-result-num con-result-num1"></span>
+                                           <em>难度赛</em>
+                                           <em>男子组</em>
+                                           <span class="con-result-arrow"></span>
+                                       </div>
+                                       <table class="paiming-table">
+                                           <thead>
+                                           <tr>
+                                               <th class="con-result-td1">排名</th>
+                                               <th class="con-result-td2">姓名</th>
+                                               <th class="con-result-td3">决赛成绩</th>
+                                           </tr>
+                                           </thead>
+                                           <tbody>
+                                           <tr>
+                                               <td><i class="con-result-rate">1</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">2</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">3</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           </tbody>
+                                       </table>
+                                   </div>
+                                   <div class="col-sm-6">
+                                       <div class="con-result-title clearfix">
+                                           <span class="con-result-num con-result-num1"></span>
+                                           <em>难度赛</em>
+                                           <em>男子组</em>
+                                           <span class="con-result-arrow"></span>
+                                       </div>
+                                       <table class="paiming-table">
+                                           <thead>
+                                           <tr>
+                                               <th class="con-result-td1">排名</th>
+                                               <th class="con-result-td2">姓名</th>
+                                               <th class="con-result-td3">决赛成绩</th>
+                                           </tr>
+                                           </thead>
+                                           <tbody>
+                                           <tr>
+                                               <td><i class="con-result-rate">1</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">2</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">3</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           </tbody>
+                                       </table>
+                                   </div>
+                                   <div class="col-sm-6">
+                                       <div class="con-result-title clearfix">
+                                           <span class="con-result-num con-result-num1"></span>
+                                           <em>难度赛</em>
+                                           <em>男子组</em>
+                                           <span class="con-result-arrow"></span>
+                                       </div>
+                                       <table class="paiming-table">
+                                           <thead>
+                                           <tr>
+                                               <th class="con-result-td1">排名</th>
+                                               <th class="con-result-td2">姓名</th>
+                                               <th class="con-result-td3">决赛成绩</th>
+                                           </tr>
+                                           </thead>
+                                           <tbody>
+                                           <tr>
+                                               <td><i class="con-result-rate">1</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">2</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           <tr>
+                                               <td><i class="con-result-rate">3</i></td>
+                                               <td><a href="javascript:;" class="con-result-td2 con-result-name">瞿海滨</a></td>
+                                               <td class="con-result-td3 con-result-grade">48 +</td>
+                                           </tr>
+                                           </tbody>
+                                       </table>
+                                   </div>
                                </div>
                            </div>
                        </div>
