--- a/test.html
+++ b/test.html
@@ -1,99 +1,121 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <title>Bootstrap 实例 - 轮播（Carousel）插件方法</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/jquery-3.1.0.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <style>
-        .wrap{ width: 60%;margin: 30px auto;overflow: hidden}
-        .carousel-inner>.item{width: 25%; display: block; float: left;}
-        .carousel-inner{display: box;display: -webkit-box;}
-        .item{-moz-box-flex: 1;-webkit-box-flex: 1;box-flex: 1;}
-        .item{margin-right: 4px;}
-        .item.item:last-child{ margin-right: 0px;}
-    </style>
+    <meta charset="utf-8">
+   <title>Bootstrap 实例 - 轮播（Carousel）插件方法</title>
+   <link href="css/bootstrap.min.css" rel="stylesheet">
+   <script src="js/jquery-3.1.0.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <style>
+        .wrap{border: 10px solid #ccc;margin: 0 auto;}
+
+      /*   .item,.item-box{display: -webkit-box;}
+      .item div,.item-box div{-webkit-box-flex:1;}
+      .item-box div:nth-child(2){padding: 0 2px;}
+      .item img,.item-box img{display: block;width: 100%;height: 100%;} */
+
+        /* .aaa{display: -webkit-box;}
+        .aaa div{-webkit-box-flex:1;}
+        .aaa div:nth-child(2){margin: 0 5px;}
+        .aaa img{width: 100%;display: block;} */
+
+        .carousel-inner>.active, .carousel-inner>.next, .carousel-inner>.prev{
+            display: -webkit-box!important;
+        }
+        .item a{display: block;-webkit-box-flex:1;}
+        .item a:nth-child(2){margin: 0 4px;}
+        .item img{display: block;width: 100%;height: 100%;}
+
+ 
+   </style>
 </head>
 <body>
 
 <div class="wrap">
     <div id="myCarousel" class="carousel slide">
-        <!--<div class="content">-->
-            <!-- 轮播（Carousel）指标 -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0"
-                    class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <!-- 轮播（Carousel）项目 -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="img/video.jpg" alt="First slide">
-                </div>
-                <div class="item">
-                    <img src="img/video.jpg" alt="Second slide">
-                </div>
-                <div class="item">
-                    <img src="img/video.jpg" alt="Third slide">
-                </div>
-                <div class="item">
-                    <img src="img/video.jpg" alt="Third slide">
-                </div>
-                <div class="item">
-                    <img src="img/video.jpg" alt="Third slide">
-                </div>
+       <!-- 轮播（Carousel）指标 -->
+       <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0"
+             class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+       </ol>  
+       <!-- 轮播（Carousel）项目 -->
+       <div class="carousel-inner">
+
+            <div class="item active">
+                 <a href="">
+                    <img src="ps/2.jpg" alt="First slide">
+                </a>
+                <a href="">
+                    <img src="ps/2.jpg" alt="First slide">
+                </a>
+                <a href="">
+                    <img src="ps/2.jpg" alt="First slide">
+                </a>
             </div>
-            <!-- 轮播（Carousel）导航 -->
-            <a class="carousel-control left" href="#myCarousel"
-               data-slide="prev">&lsaquo;</a>
-            <a class="carousel-control right" href="#myCarousel"
-               data-slide="next">&rsaquo;</a>
-            <!-- 控制按钮 -->
-            <div style="text-align:center;">
-                <input type="button" class="btn start-slide" value="Start">
-                <input type="button" class="btn pause-slide" value="Pause">
-                <input type="button" class="btn prev-slide" value="Previous Slide">
-                <input type="button" class="btn next-slide" value="Next Slide">
-                <input type="button" class="btn slide-one" value="Slide 1">
-                <input type="button" class="btn slide-two" value="Slide 2">
-                <input type="button" class="btn slide-three" value="Slide 3">
+            <div class="item">
+                <a href="">
+                    <img src="ps/2.jpg" alt="First slide">
+                </a>
+                <a href="">
+                    <img src="ps/2.jpg" alt="First slide">
+                </a>
+                <a href="">
+                    <img src="ps/2.jpg" alt="First slide">
+                </a>
             </div>
-        <!--</div>-->
+       </div>
+
+        
+       <!-- 轮播（Carousel）导航 -->
+       <a class="carousel-control left" href="#myCarousel"
+          data-slide="prev">&lsaquo;</a>
+       <a class="carousel-control right" href="#myCarousel"
+          data-slide="next">&rsaquo;</a>
+       <!-- 控制按钮 -->
+       <div style="text-align:center;position: absolute;left: 600px;top: 0px;">
+          <input type="button" class="btn start-slide" value="Start">
+          <input type="button" class="btn pause-slide" value="Pause">
+          <input type="button" class="btn prev-slide" value="Previous Slide">
+          <input type="button" class="btn next-slide" value="Next Slide">
+          <input type="button" class="btn slide-one" value="Slide 1">
+          <input type="button" class="btn slide-two" value="Slide 2">           
+          <input type="button" class="btn slide-three" value="Slide 3">
+       </div>
     </div>
 </div>
 <script>
-    $(function(){
-        /*// 初始化轮播
-        $(".start-slide").click(function(){
-            $("#myCarousel").carousel('cycle');
-        });
-        // 停止轮播
-        $(".pause-slide").click(function(){
-            $("#myCarousel").carousel('pause');
-        });
-        // 循环轮播到上一个项目
-        $(".prev-slide").click(function(){
-            $("#myCarousel").carousel('prev');
-        });
-        // 循环轮播到下一个项目
-        $(".next-slide").click(function(){
-            $("#myCarousel").carousel('next');
-        });
-        // 循环轮播到某个特定的帧
-        $(".slide-one").click(function(){
-            $("#myCarousel").carousel(0);
-        });
-        $(".slide-two").click(function(){
-            $("#myCarousel").carousel(1);
-        });
-        $(".slide-three").click(function(){
-            $("#myCarousel").carousel(2);
-        });*/
-    });
+   $(function(){
+      // 初始化轮播
+      $(".start-slide").click(function(){
+         $("#myCarousel").carousel('cycle');
+      });
+      // 停止轮播
+      $(".pause-slide").click(function(){
+         $("#myCarousel").carousel('pause');
+      });
+      // 循环轮播到上一个项目
+      $(".prev-slide").click(function(){
+         $("#myCarousel").carousel('prev');
+      });
+      // 循环轮播到下一个项目
+      $(".next-slide").click(function(){
+         $("#myCarousel").carousel('next');
+      });
+      // 循环轮播到某个特定的帧
+      $(".slide-one").click(function(){
+         $("#myCarousel").carousel(0);
+      });
+      $(".slide-two").click(function(){
+         $("#myCarousel").carousel(1);
+      });
+      $(".slide-three").click(function(){
+         $("#myCarousel").carousel(2);
+      });
+   });
 </script>
-
-
+ 
+ 
 </body>
 </html>
