--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bootstrap</title>
+    <title>攀岩在线</title>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
             <span class="g-arrow"></span>
             <div class="collapse navbar-collapse" >
                 <ul class="nav navbar-nav">
-                    <li class="g-nav-li active"><a href="javascript:;"><em>首页</em><span>HOME</span></a></li>
+                    <li class="g-nav-li g-nav-first active"><a href="javascript:;"><em>首页</em><span>HOME</span></a></li>
                     <li class="g-nav-li"><a href="javascript:;"><em>赛事报名</em><span>REGISTER</span></a></li>
                     <li class="g-nav-li"><a href="javascript:;"><em>赛事安排</em><span>CALENDAR</span></a></li>
                     <li class="g-nav-li"><a href="javascript:;"><em>赛事成绩</em><span>RESULT</span></a></li>
